--- a/Proyecto_prueva/build.xml
+++ b/Proyecto_prueva/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Proyecto_prueva" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Proyecto_prueva.</description>
+<project name="Proyecto_Prueba" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Proyecto_Prueba.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Proyecto_prueva-impl.jar">
+        <target name="run" depends="Proyecto_Prueba-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
