--- a/Proyecto_prueva/nbproject/project.properties
+++ b/Proyecto_prueva/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Proyecto_prueva
+application.title=Proyecto_Prueba
 application.vendor=angel
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
@@ -30,10 +30,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Proyecto_prueva.jar
+dist.jar=${dist.dir}/Proyecto_Prueba.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Proyecto_prueva
+dist.jlink.output=${dist.jlink.dir}/Proyecto_Prueba
 endorsed.classpath=
 excludes=
 includes=**
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Proyecto_prueva
+jlink.launcher.name=Proyecto_Prueba
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
